--- a/Research_on_water_status_Chapters/Chapter1_Introduction.tex
+++ b/Research_on_water_status_Chapters/Chapter1_Introduction.tex
@@ -11,21 +11,21 @@ Nevertheless, the reliability, stability, and durability of the fuel cell stack,
 % DONE: 浓缩含水检测的方法
 % TODO: 把含水状态检测方法的部分分别讲一下优缺点
 % TODO: 基于阻抗的和基于含水量的方法之间有什么区别
-During the operational phase of the fuel cell, it is imperative to maintain the internal proton exchange membrane (PEM) in an optimal state of hydration to ensure the proton conduction ability remains at its peak, thereby achieving efficient and stable output performance of the fuel cell. 
-Hydration state failure is the most prevalent failure mode of fuel cells, accounting for approximately 52 of total failures, primarily manifested as drying and flooding. 
-Short-term hydration state failure can induce fluctuations and reductions in the output performance of the fuel cell. If this condition persists, it may lead to irreversible attenuation.
-The insufficiency of water in PEMFC could result the decrease of proton conductivity\cite{shen_partial_2020,ous_degradation_2013,xiao_influence_2023}.
+During the operation of the fuel cell, it is crucial to maintain the proton exchange membrane (PEM) in an optimal state of hydration to ensure that the proton conduction capability is at its zenith, thereby facilitating efficient and stable output performance.
+Hydration state failure is the most common failure mode in fuel cells, representing approximately 52\% of total failures, and is primarily characterized by conditions of drying and flooding.
+Short-term hydration state failures can lead to fluctuations and reductions in the fuel cell's output performance, and if such conditions are prolonged, they may result in irreversible performance degradation.
+The deficiency of water in PEMFC can lead to a decrease in proton conductivity, as noted in the literature \cite{shen_partial_2020,ous_degradation_2013,xiao_influence_2023}, which underscores the importance of monitoring and managing the hydration state to prevent operational inefficiencies and long-term damage to the fuel cell system.
 % DONE: 讲水很重要，干燥会造成什么样的影响。缺水会导致什么样的损伤。
 % 在燃料电池运行阶段，必须保持内部质子交换膜（PEM）处于最佳水合状态，以保证质子传导能力保持在峰值，从而实现燃料电池高效稳定的输出性能。
 % 水合状态失效是燃料电池最常见的失效模式，约占总失效的 52 例，主要表现为干燥和水淹。短期水合状态失效会引起燃料电池输出性能的波动和降低。如果这种情况持续存在，可能会导致不可逆的衰减。
 \par
-Under dry failure, the water content inside the stack is too low to keep an sufficiently hydrated state,
-and the internal resistance increases and heat production increases since some region of the PEM are not fully hydrated.
-Long-term dryness may even cause mechanical damage to the PEM, resulting in irreversible damage\cite{pattersonDamageCathodeCatalyst2006}.
+In the event of a dry failure, the water content within the fuel cell stack is insufficient to maintain a properly hydrated state, leading to an increase in internal resistance and elevated heat production due to regions of the PEM not being fully hydrated.
+Prolonged dry conditions can potentially cause mechanical damage to the PEM, resulting in irreversible harm \cite{pattersonDamageCathodeCatalyst2006}.
+This highlights the critical need for maintaining adequate water content to prevent performance degradation and structural integrity loss in the fuel cell system.
 % 在干燥失效的情况下，电堆内部的含水量太低，无法保持足够的水合状态，由于质子交换膜的某些区域没有完全水合，内阻增加，产热量增加。长期干燥甚至可能对质子交换膜造成机械损伤，造成不可逆的损坏\cite{pattersonDamageCathodeCatalyst2006}。
-Under flooding failure, the water content inside the stack is too high, and the liquid water gradually block the flow channel or reaction area,preventing the reaction gas from reaching the reaction site, causing a local "starvation" phenomenon\cite{chuExperimentalStudyInfluence2022,ohsModelingHydrogenStarvation2011}.
+In the event of a flood failure, the water content inside the stack is too high, and the liquid water gradually block the flow channel or reaction area,preventing the reaction gas from reaching the reaction site, causing a local "starvation" phenomenon\cite{chuExperimentalStudyInfluence2022,ohsModelingHydrogenStarvation2011}.
 % 在淹没失效情况下，电堆内部含水量过高，液态水逐渐堵塞流道或反应区域，阻止反应气体到达反应现场，造成局部“饥饿”现象
-In severe cases, other side reactions  will occur in the fuel cell at this time, causing damage to the carbon carrier\cite{ohsModelingHydrogenStarvation2011,kuracinaStudySelectedCharacteristics2014,jiaMitigationStrategiesHydrogen2017}.
+In severe instances, additional side reactions can occur within the fuel cell under these conditions, leading to damage to the carbon carrier\cite{ohsModelingHydrogenStarvation2011,kuracinaStudySelectedCharacteristics2014,jiaMitigationStrategiesHydrogen2017}. This emphasizes the importance of preventing extreme dry failures to safeguard the structural and functional integrity of the fuel cell components, thereby ensuring long-term reliability and performance.
 % 严重的情况下，此时燃料电池中会发生其他副反应，对碳载体造成损害
 \par
 In addition to the direct impact on output performance, the internal hydration state also indirectly affects environmental adaptability and durability\cite{yuanModelbasedObserversInternal2020,fuFuelCellHumidity2021}. In low temperature conditions, especially in sub-zero environments, the free water inside the fuel cell will freeze, thereby blocking the reactant channels, and even causing structural damage to the catalyst layer and diffusion layer\cite{taccaniEffectFlowField2011,doddsHydrogenFuelCell2015}. In addition, it will also affect the aging characteristics of the catalyst\cite{pattersonDamageCathodeCatalyst2006,sunModelingInfluenceGDL2005}. Flooding conditions will accelerate the loss of Pt surface area, while dry conditions will accelerate the corrosion of the carbon carrier \cite{yousfisteinerDiagnosisPolymerElectrolyte2011,chenOperationCharacteristicsCarbon2015}.
@@ -34,7 +34,7 @@ In addition to the direct impact on output performance, the internal hydration s
 Currently, studies focusing on the characterization of the internal hydration state of fuel cells have yielded significant findings. Standard indicators utilized for ascertaining the hydration state of fuel cells encompass direct observation or computation of water content, electrical signals, pressure drop signals, and electrochemical signals \cite{hussainiVisualizationQuantificationCathode2009}.
 % 目前，针对燃料电池内部水合状态表征的研究已经取得了重要的发现。用于确定燃料电池水合状态的标准指标包括直接观察或计算水含量、电信号、压降信号和电化学信号
 \par
-The identification of a fuel cell's hydration state fundamentally involves determining the internal water content, making this the most basic and accurate assessment. Direct observation of water content can be facilitated through the transparent cell method and the neutron imaging method. The transparent cell method modifies the traditional fuel cell structure, employing transparent end plates and flow field plates to directly observe the quantity of liquid water within the flow field\cite{leeVisualizationFloodingSingle2012}. Hussaini et al\cite{hussainiVisualizationQuantificationCathode2009} designed a fuel cell with an effective area of 14cm², containing seven straight channels, and conducted a visual examination of the liquid water content in the fuel cell channels under typical automotive conditions. Yang et al\cite{yangVisualizationLiquidWater2004} utilized a transparent fuel cell for experiments to observe the process of liquid water transfer, discovering that water droplets initially appear on the GDL surface and adhere to the GDL surface due to surface tension. The neutron imaging method is predicated on the principle that rays will attenuate when traversing an object. Given that different materials exhibit varying attenuation characteristics for neutron beams, particularly as water has higher absorbency than other materials such as metals, the internal water content can be measured using the transmitted neutron dose rate. Pekula\cite{pekulaStudyWaterDistribution2005} and Trabold\cite{traboldSituInvestigationWater2006} employed neutron imaging technology and found that water accumulation is likely to occur where the flow channel turns, providing appropriate explanations for each. However, the high cost and complex operation of current neutron imaging equipment have limited its widespread adoption.
+The identification of a fuel cell's hydration state fundamentally involves determining the internal water content, making this the most basic and accurate assessment. Direct observation of water content can be facilitated through the transparent cell method and the neutron imaging method. The transparent cell method modifies the traditional fuel cell structure, employing transparent end plates and flow field plates to directly observe the quantity of liquid water within the flow field\cite{leeVisualizationFloodingSingle2012}. Hussaini et al\cite{hussainiVisualizationQuantificationCathode2009} designed a fuel cell with an effective area of 14cm², containing seven straight channels, and conducted a visual examination of the liquid water content in the fuel cell channels under typical automotive conditions. Yang et al\cite{yangVisualizationLiquidWater2004} utilized a transparent fuel cell for experiments to observe the process of liquid water transfer, discovering that water droplets initially appear on the GDL(Gas Diffusion Layer) surface and adhere to the GDL surface due to surface tension. The neutron imaging method is predicated on the principle that rays will attenuate when traversing an object. Given that different materials exhibit varying attenuation characteristics for neutron beams, particularly as water has higher absorbency than other materials such as metals, the internal water content can be measured using the transmitted neutron dose rate. Pekula\cite{pekulaStudyWaterDistribution2005} and Trabold\cite{traboldSituInvestigationWater2006} employed neutron imaging technology and found that water accumulation is likely to occur where the flow channel turns, providing appropriate explanations for each. However, the high cost and complex operation of current neutron imaging equipment have limited its widespread adoption.
 % 燃料电池水合状态的识别从根本上涉及确定内部含水量，这是最基本、最准确的评估。通过透明池法和中子成像法可以方便地直接观察水分含量。透明电池方法修改了传统燃料电池结构，采用透明端板和流场板直接观察流场内液态水的量\cite{leeVisualizationFloodingSingle2012}。Hussaini 等人\cite{hussainiVisualizationQuantificationCathode2009}设计了一个有效面积为 14cm²的燃料电池，包含七个直通道，并在典型的汽车条件下对燃料电池通道中的液态水含量进行了目视检查。Yang 等人\cite{yangVisualizationLiquidWater2004}利用透明燃料电池进行实验，观察液态水转移的过程，发现水滴最初出现在 GDL 表面上，并由于表面张力而粘附在 GDL 表面上。中子成像方法基于射线穿过物体时会衰减的原理。鉴于不同的材料对中子束表现出不同的衰减特性，特别是当水比金属等其他材料具有更高的吸收性时，可以使用透射中子剂量率来测量内部含水量。Pekula\cite{pekulaStudyWaterDistribution2005}和 Trabold\cite{traboldSituInvestigationWater2006}采用中子成像技术，发现水流通道转弯处很可能发生积水，并为两者提供了适当的解释。然而，当前中子成像设备的高成本和复杂的操作限制了其广泛采用。
 \par
 Consequently, researchers have considered utilizing the law of conservation of mass to compute the water content within the fuel cell. When the fuel cell is operating stably, the flow rate of residual water can be calculated by measuring the discharged water. Zhao et al\cite{zhaoStudyWaterTransport2021} employed a single transparent fuel cell to conduct tests under varying operating conditions.
@@ -86,11 +86,16 @@ Researches indicates that there may exist notable differences in the water gener
 
 % 大型电堆通常在低功率密度下工作，这可能会对水生成带来一定的影响 [4]
 \par
-Consequently, this study aims to investigate the hydration state of high-power fuel cell systems, construct, and validate a water balance model. Initially, the water balance model of the high-power fuel cell system is scrutinized, and a condensation-type exhaust water collection device is established to compute the water flow rate emanating from the fuel cell system.
-To authenticate the constructed water balance model, controlled variable experiments are executed under varying working temperatures, air metering ratios, and load currents. The experimental outcomes indicate that as the working temperature and air metering ratio escalate, the water flow rate emanating from the air side incrementally increases, and the water flow rate from the hydrogen side gradually diminishes.
-As the load current amplifies, the water flow rate emanating from both sides augments. Ultimately, predicated on the experimental data, the change rate of the internal water content of the fuel cell system under diverse conditions is calculated. The results reveal that under the same load current, as the working temperature and the air stoichiometric ratio augment, the change rate of the internal water content of the fuel cell system progressively decreases.
-Conversely, as the load current intensifies, the impact of the air stoichiometric ratio also incrementally escalates. Therefore, at low power, it is essential to maintain an appropriate working temperature, while at high power, upholding an appropriate metering ratio is of greater significance.
+% Consequently, this study aims to investigate the hydration state of high-power fuel cell systems, construct, and validate a water balance model. Initially, the water balance model of the high-power fuel cell system is scrutinized, and a condensation-type exhaust water collection device is established to compute the water flow rate emanating from the fuel cell system.
+This study is dedicated to exploring the hydration state of high-power fuel cell systems and developing a validated water balance model. The research begins by examining the water balance model of a high-power fuel cell system and introduces a condensation-type exhaust water collection device to accurately measure the water flow rate exiting the system.
+To validate the constructed water balance model, controlled variable experiments were conducted across different operating temperatures, air-to-fuel ratios, and load currents. The experimental results show that with increasing operating temperature and air-to-fuel ratio, the water flow rate from the air side increases, while the water flow rate from the hydrogen side decreases. Additionally, as the load current increases, the water flow rate from both sides increases.
+% To authenticate the constructed water balance model, controlled variable experiments are executed under varying working temperatures, air metering ratios, and load currents. The experimental outcomes indicate that as the working temperature and air metering ratio escalate, the water flow rate emanating from the air side incrementally increases, and the water flow rate from the hydrogen side gradually diminishes.
+Based on the experimental data, the rate of change in the internal water content of the fuel cell system under various conditions was calculated. The findings indicate that at the same load current, as the operating temperature and air stoichiometric ratio increase, the rate of change in the internal water content of the fuel cell system decreases. Conversely, as the load current increases, the influence of the air stoichiometric ratio also increases.
+% As the load current amplifies, the water flow rate emanating from both sides augments. Ultimately, predicated on the experimental data, the change rate of the internal water content of the fuel cell system under diverse conditions is calculated. The results reveal that under the same load current, as the working temperature and the air stoichiometric ratio augment, the change rate of the internal water content of the fuel cell system progressively decreases.
+Thus, at low power, maintaining an appropriate operating temperature is crucial, whereas at high power, managing an appropriate metering ratio becomes more significant. This research provides valuable insights into optimizing the operational parameters of high-power fuel cell systems to ensure efficient water management and system performance.
+% Conversely, as the load current intensifies, the impact of the air stoichiometric ratio also incrementally escalates. Therefore, at low power, it is essential to maintain an appropriate working temperature, while at high power, upholding an appropriate metering ratio is of greater significance.
 
 % 因此，本研究旨在研究高功率燃料电池系统的水合状态，构建并验证水平衡模型。首先，仔细研究了大功率燃料电池系统的水平衡模型，并建立了冷凝式废水收集装置来计算从燃料电池系统排出的水流量。为了验证所构建的水平衡模型，在不同的工作温度、空气计量比和负载电流下进行了受控变量实验。实验结果表明，随着工作温度和空气计量比的升高，空气侧出水流量逐渐增大，氢气侧出水流量逐渐减小。随着负载电流的增大，从两侧流出的水流量增大。最终根据实验数据计算出不同条件下燃料电池系统内部含水量的变化率。结果表明，在相同负载电流下，随着工作温度和空气化学计量比的增大，燃料电池系统内部含水量的变化率逐渐减小。相反，随着负载电流的增强，空气化学计量比的影响也逐渐增大。因此，在低功率时，保持适当的工作温度至关重要，而在高功率时，保持适当的计量比则更为重要。
 \par
-Based on the experiment results, we propose the following viewpoint: The water generation and water balance models for large-scale fuel cell stacks differ mechanistically from those of smaller-scale models and cannot be considered as linear scalings of the smaller models. The internal states of large-scale fuel cell stacks exceed the complexity of small-scale stacks due to their increased scale. Consequently, traditional approaches based on small-scale stacks may not be entirely applicable to large-scale stacks.
+Drawing from the experimental results, we posit the following perspective: The water generation and water balance models for large-scale fuel cell stacks exhibit fundamental differences from those of smaller-scale models, and they cannot be simply regarded as linear extensions of the smaller models. The internal states of large-scale fuel cell stacks are more intricate due to their increased scale, which introduces additional complexities not present in smaller stacks. Therefore, conventional methodologies rooted in small-scale stack models may not fully capture the nuances of large-scale stack behavior. This insight underscores the need for tailored modeling approaches that account for the unique characteristics and operational challenges of large-scale fuel cell systems.
+% Based on the experiment results, we propose the following viewpoint: The water generation and water balance models for large-scale fuel cell stacks differ mechanistically from those of smaller-scale models and cannot be considered as linear scalings of the smaller models. The internal states of large-scale fuel cell stacks exceed the complexity of small-scale stacks due to their increased scale. Consequently, traditional approaches based on small-scale stacks may not be entirely applicable to large-scale stacks.
